--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,7 @@
-flask==2.0.1
-flask-cors==3.0.10
-numpy==1.21.0
-opencv-python-headless==4.5.3.56
-mediapipe==0.10.5
+flask==3.0.2
+flask-cors==4.0.0
+opencv-python==4.9.0.80
+mediapipe==0.10.9
+numpy==1.26.4
 gunicorn==20.1.0
 python-dotenv==0.19.0 
